# devnotes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2a84ac416690_init_tables.py  64097374481b_create_initial_tables.py
devnotes/: __init__.py  conftest.py  main.py
devnotes/src/: __init__.py  main.py
devnotes/src/alchemy_schema/: base.py  note.py  tag.py  user.py
devnotes/src/crud/: __init__.py  base.py  note.py  tag.py  user.py
devnotes/src/custom_exception/: __init__.py  checker.py  constant.py  crud.py
devnotes/src/model/: note.py  tag.py
devnotes/src/pydant_model/: __init__.py  tag.py  user.py
devnotes/src/router/: __init__.py  main.py
devnotes/src/schema/: note.py  tag.py  user.py
devnotes/tests/: test_response.py
