[project]
name = "devnotes"
version = "0.1.0"
description = "тренировочный пет с заметками"
authors = [
    {name = "Aleksandrazt",email = "s.tsarkova2013@yandex.ru"}
]
packages = [{ include = "devnotes" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pytest = "^8.3.5"
httpx = "^0.28.1"
pre-commit = "^4.2.0"
black = "^25.1.0"
mypy = "^1.15.0"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.2"


[tool.poetry.group.black.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
fix = true

[tool.mypy]
strict = true
plugins = []

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
python_files = "test_*.py"
